prevent overflowing of article box

--- a/apps/app-article/src/index.css
+++ b/apps/app-article/src/index.css
@@ -439,3 +439,7 @@ body {
     width: 100%;
     height:196px;
 }
+
+.container-fluid.article {
+    overflow-x: hidden;
+}
